--- a/templates/car/carRec.html
+++ b/templates/car/carRec.html
@@ -100,7 +100,7 @@
             }
 
             function addMarker(point, index, data) {  // 创建图标对象
-                var myIcon = new BMap.Icon("markers.png", new BMap.Size(23, 25), {
+                var myIcon = new BMap.Icon("{{ url_for('static', filename='img/car.png') }}", new BMap.Size(23, 25), {
                     // 指定定位位置。
                     // 当标注显示在地图上时，其所指向的地理位置距离图标左上
                     // 角各偏移10像素和25像素。您可以看到在本例中该位置即是
@@ -113,7 +113,7 @@
                 });
                 // 创建标注对象并添加到地图
 //    var marker = new BMap.Marker(point, {icon: myIcon});
-                var marker = new BMap.Marker(point);
+                var marker = new BMap.Marker(point, {icon: myIcon});
                 marker.addEventListener("click", function () {
                     $('#modal-title').text(data['car']['name']);
                     $('#modal-carImg').attr('src', data['car']['img']);
