--- a/templates/car/carRec.html
+++ b/templates/car/carRec.html
@@ -105,6 +105,7 @@
                     // 当标注显示在地图上时，其所指向的地理位置距离图标左上
                     // 角各偏移10像素和25像素。您可以看到在本例中该位置即是
                     // 图标中央下端的尖角位置。
+                    imageUrl:"http://oc1is8h9w.bkt.clouddn.com/car.png",
                     anchor: new BMap.Size(10, 25),
                     // 设置图片偏移。
                     // 当您需要从一幅较大的图片中截取某部分作为标注图标时，您
