--- a/templates/car/carRec.html
+++ b/templates/car/carRec.html
@@ -100,7 +100,7 @@
             }
 
             function addMarker(point, index, data) {  // 创建图标对象
-                var myIcon = new BMap.Icon("http://oc1is8h9w.bkt.clouddn.com/car.png", new BMap.Size(23, 25), {
+                var myIcon = new BMap.Icon("http://oc1is8h9w.bkt.clouddn.com/carMarker.png", new BMap.Size(23, 25), {
                     // 指定定位位置。
                     // 当标注显示在地图上时，其所指向的地理位置距离图标左上
                     // 角各偏移10像素和25像素。您可以看到在本例中该位置即是
@@ -150,7 +150,7 @@
                                 var lng = d['lng'];
                                 var lat = d['lat'];
                                 var point = new BMap.Point(lng, lat);
-                                addMarker(point, 1, d);
+                                addMarker(point, 0, d);
                                 map.centerAndZoom(point, 15);
                             }
                             else{
