--- a/templates/car/carRec.html
+++ b/templates/car/carRec.html
@@ -100,12 +100,11 @@
             }
 
             function addMarker(point, index, data) {  // 创建图标对象
-                var myIcon = new BMap.Icon("http://oc1is8h9w.bkt.clouddn.com/carMarker.png", new BMap.Size(80, 80), {
+                var myIcon = new BMap.Icon("http://oc1is8h9w.bkt.clouddn.com/carmarker1.png", new BMap.Size(300, 225), {
                     // 指定定位位置。
                     // 当标注显示在地图上时，其所指向的地理位置距离图标左上
                     // 角各偏移10像素和25像素。您可以看到在本例中该位置即是
                     // 图标中央下端的尖角位置。
-                    anchor: new BMap.Size(10, 25),
                     // 设置图片偏移。
                     // 当您需要从一幅较大的图片中截取某部分作为标注图标时，您
                     // 需要指定大图的偏移位置，此做法与css sprites技术类似。
