--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,25 @@
 </head>
 
 <body>
+<nav>
+    <div class="nav-wrapper blue lighten-2">
+        <a href="/carIndex" class="brand-logo">通力汽车 测试</a>
+      <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+      <ul class="right hide-on-med-and-down">
+        <li><a href="{{url_for('customerList')}}">客户信息</a></li>
+        <li><a href="{{url_for('carList')}}">车辆信息</a></li>
+        <li><a href="{{url_for('mendHistoryList')}}">维护信息</a></li>
+        <li><a href="{{url_for('historyList')}}">租赁历史</a></li>
+      </ul>
+      <ul class="side-nav" id="mobile-demo">
+        <li><a href="{{url_for('customerList')}}">客户信息</a></li>
+        <li><a href="{{url_for('carList')}}">车辆信息</a></li>
+        <li><a href="{{url_for('mendHistoryList')}}">维护信息</a></li>
+        <li><a href="{{url_for('historyList')}}">租赁历史</a></li>
+      </ul>
+    </div>
 
+</nav>
 {% block content %}{% endblock %}
 {% block modal %}
 
