--- a/templates/car/customerDetail.html
+++ b/templates/car/customerDetail.html
@@ -19,7 +19,7 @@
     </tr>
     <tr>
         <td>客户名</td>
-        <td>{{data.name}}</a></td>
+        <td>{{data.name}}</td>
     </tr>
     <tr>
         <td>性别</td>
