--- a/templates/car/historyDetail.html
+++ b/templates/car/historyDetail.html
@@ -15,7 +15,7 @@
 
     <tr>
         <td>客户</td>
-        <td><a href="/customerDetail/{{data.Customer.id}}">{{data.Customer.name}}</a></td>
+        <td><a href="/customer/{{data.Customer.id}}">{{data.Customer.name}}</a></td>
     </tr>
     <tr>
         <td>租赁开始时间</td>
