--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
 <body>
 <nav>
     <div class="nav-wrapper blue lighten-2">
-        <a href="/carIndex" class="brand-logo">通力汽车 测试</a>
+        <a href="{{url_for('carIndex')}}" class="brand-logo"><i class="material-icons">home</i>通力汽车</a>
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
         <li><a href="{{url_for('customerList')}}">客户信息</a></li>
