--- a/templates/car/carRec.html
+++ b/templates/car/carRec.html
@@ -1,170 +1,188 @@
 {% extends "base.html" %}
 {% block css %}
 
-    <style type="text/css">
-        html {
-            height: 100%
-        }
+<style type="text/css">
+    html {
+        height: 100%
+    }
 
-        body {
-            height: 100%;
-            margin: 0px;
-            padding: 0px
-        }
+    body {
+        height: 100%;
+        margin: 0px;
+        padding: 0px
+    }
 
-        .container {
-            height: 90%
-        }
+    .container {
+        height: 90%
+    }
 
-        #map-container {
-            height: 90%
-        }
+    #map-container {
+        height: 90%
+    }
 
-        #modal-carImg {
+    #modal-carImg {
 
-        }
-    </style>
+    }
+
+    .freeDiv {
+        position: absolute;
+        bottom: 70px;
+
+    }
+</style>
 {% endblock %}
 {% block content %}
 
 
+<div id="map-container">
 
-    <div id="map-container">
-
-    </div>
+</div>
 
 
-    <!-- Modal Structure -->
-    <div id="modal1" class="modal bottom-sheet">
-        <div class="modal-content">
-            <div class="row">
-                <div class="col s4">
-                    <img class="circle responsive-img" src="" alt="汽车图像" id="modal-carImg">
-                </div>
-                <div class="col s8">
-                    <h4 id="modal-title">
-
-                    </h4>
-                </div>
+<!-- Modal Structure -->
+<div id="modal1" class="modal bottom-sheet">
+    <div class="modal-content">
+        <div class="row">
+            <div class="col s4">
+                <img class="circle responsive-img" src="" alt="汽车图像" id="modal-carImg">
             </div>
+            <div class="col s8">
+                <h4 id="modal-title">
 
-
-            <p id="modal-refreshTime">更新时间：</p>
-            <p id="modal-currentLoc">当前位置：</p>
-            <div class="row">
-                <div class="col s6">
-                    <a href="#" id="modal-carRec">回放</a>
-                </div>
-                <!--<div class="col s4">-->
-                <!--<a href="#">-->
-                <!--回放-->
-                <!--</a>-->
-                <!--</div>-->
-                <div class="col s6">
-                    <a id="modal-carDetail" href="#">
-                        详细信息
-                    </a>
-                </div>
-
+                </h4>
             </div>
         </div>
-        <div class="modal-footer">
-            <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">关闭</a>
+
+
+        <p id="modal-refreshTime">更新时间：</p>
+        <p id="modal-currentLoc">当前位置：</p>
+        <div class="row">
+            <div class="col s6">
+                <a href="#" id="modal-carRec">回放</a>
+            </div>
+            <!--<div class="col s4">-->
+            <!--<a href="#">-->
+            <!--回放-->
+            <!--</a>-->
+            <!--</div>-->
+            <div class="col s6">
+                <a id="modal-carDetail" href="#">
+                    详细信息
+                </a>
+            </div>
+
         </div>
     </div>
+    <div class="modal-footer">
+        <a href="#" class=" modal-action modal-close waves-effect waves-green btn-flat">关闭</a>
+    </div>
+</div>
+<div class="freeDiv"><span class="new badge"  id="recTime" data-badge-caption=""></span></div>
 {% endblock %}
 {% block script %}
-    <script type="text/javascript"
-            src="http://api.map.baidu.com/api?v=3.0&ak=67CKhYZ0N7g1M0BLOHnOqsu6idBxN2vT"></script>
-    <script>
-        $(document).ready(function () {
-            // the "href" attribute of .modal-trigger must specify the modal ID that wants to be triggered
-            $('.modal').modal();
+<script type="text/javascript"
+        src="http://api.map.baidu.com/api?v=3.0&ak=67CKhYZ0N7g1M0BLOHnOqsu6idBxN2vT"></script>
+<script>
+    $(document).ready(function () {
+        // the "href" attribute of .modal-trigger must specify the modal ID that wants to be triggered
+        $('.modal').modal();
 
-            var map = new BMap.Map("map-container");
+        var map = new BMap.Map("map-container");
 
-            function timestampToTime(timestamp) {
-                var date = new Date(timestamp * 1000);//时间戳为10位需*1000，时间戳为13位的话不需乘1000
-                Y = date.getFullYear() + '-';
-                M = (date.getMonth() + 1 < 10 ? '0' + (date.getMonth() + 1) : date.getMonth() + 1) + '-';
-                D = date.getDate() + ' ';
-                h = date.getHours() + ':';
-                m = date.getMinutes() + ':';
-                s = date.getSeconds();
-                return Y + M + D + h + m + s;
-            }
+        function timestampToTime(timestamp) {
+            var date = new Date(timestamp * 1000);//时间戳为10位需*1000，时间戳为13位的话不需乘1000
+            Y = date.getFullYear() + '-';
+            M = (date.getMonth() + 1 < 10 ? '0' + (date.getMonth() + 1) : date.getMonth() + 1) + '-';
+            D = date.getDate() + ' ';
+            h = date.getHours() + ':';
+            m = date.getMinutes() + ':';
+            s = date.getSeconds();
+            return Y + M + D + h + m + s;
+        }
 
-            function addMarker(point, index, data) {  // 创建图标对象
-                var myIcon = new BMap.Icon("http://oc1is8h9w.bkt.clouddn.com/carmarker1.png", new BMap.Size(300, 225), {
-                    // 指定定位位置。
-                    // 当标注显示在地图上时，其所指向的地理位置距离图标左上
-                    // 角各偏移10像素和25像素。您可以看到在本例中该位置即是
-                    // 图标中央下端的尖角位置。
-                    // 设置图片偏移。
-                    // 当您需要从一幅较大的图片中截取某部分作为标注图标时，您
-                    // 需要指定大图的偏移位置，此做法与css sprites技术类似。
-                    imageOffset: new BMap.Size(0, 0 - index * 25)   // 设置图片偏移
-                });
-                // 创建标注对象并添加到地图
+        function addMarker(point, index, data) {  // 创建图标对象
+            var myIcon = new BMap.Icon("http://oc1is8h9w.bkt.clouddn.com/carmarker1.png", new BMap.Size(300, 225), {
+                // 指定定位位置。
+                // 当标注显示在地图上时，其所指向的地理位置距离图标左上
+                // 角各偏移10像素和25像素。您可以看到在本例中该位置即是
+                // 图标中央下端的尖角位置。
+                // 设置图片偏移。
+                // 当您需要从一幅较大的图片中截取某部分作为标注图标时，您
+                // 需要指定大图的偏移位置，此做法与css sprites技术类似。
+                imageOffset: new BMap.Size(0, 0 - index * 25)   // 设置图片偏移
+            });
+            // 创建标注对象并添加到地图
 //    var marker = new BMap.Marker(point, {icon: myIcon});
-                var marker = new BMap.Marker(point, {icon: myIcon,rotation:data['course']});
-                marker.addEventListener("click", function () {
-                    $('#modal-title').text(data['car']['name']);
-                    $('#modal-carImg').attr('src', data['car']['img']);
-                    $('#modal-refreshTime').text($('当前时间：' + timestampToTime(data['gps_time']));
-                    $('#modal-currentLoc').text('当前位置：'+ data['address']);
-                    $('#modal-carDetail').attr('href', 'carDetail' + '/' + data['car']['id']);
-                    $('#modal-carRec').attr('href', 'carRec' + '/' + data['car']['id']);
-                    $('#modal1').modal('open');
+            var marker = new BMap.Marker(point, {icon: myIcon, rotation: data['course']});
+            marker.addEventListener("click", function () {
+                $('#modal-title').text(data['car']['name']);
+                $('#modal-carImg').attr('src', data['car']['img']);
+                $('#modal-refreshTime').text($('当前时间：' + timestampToTime(data['gps_time'])));
+                $('#modal-currentLoc').text('当前位置：' + data['address']);
+                $('#modal-carDetail').attr('href', 'carDetail' + '/' + data['car']['id']);
+                $('#modal-carRec').attr('href', 'carRec' + '/' + data['car']['id']);
+                $('#modal1').modal('open');
 
-                });
-                map.addOverlay(marker);
-            }
+            });
+            map.addOverlay(marker);
+        }
 
-            map.addControl(new BMap.NavigationControl());
-            map.addControl(new BMap.ScaleControl());
-            map.addControl(new BMap.OverviewMapControl());
-            map.addControl(new BMap.MapTypeControl());
-            var data = [];
-
-
-            $.ajax({
-                url: '/api/carrec/' + '{{data.code}}',
-                type: 'get',
+        map.addControl(new BMap.NavigationControl());
+        map.addControl(new BMap.ScaleControl());
+        map.addControl(new BMap.OverviewMapControl());
+        map.addControl(new BMap.MapTypeControl());
+        var data = [];
+        var ended_at = Date.parse(new Date()) / 1000;
+        var started_at = ended_at - 3600 * 24;
+        $.ajax({
+            url: '/api/carrec/' + '{{data.code}}' + "?started_at=" + started_at + "&ended_at=" + ended_at,
+            type: 'get',
 //        data: formData,
-                contentType: false,
-                processData: false,
-                success: function (result) {
-                    if (result['status'] == "ok") {
-                        data = result['data'];
-                        var t1 = setInterval(function () {
-                            map.clearOverlays();
-                            var d = data.shift();
-                            if (d) {
-                                var lng = d['lng'];
-                                var lat = d['lat'];
-                                var point = new BMap.Point(lng, lat);
-                                addMarker(point, 1, d);
-                                map.centerAndZoom(point, 15);
-                            }
-                            else{
-                                clearInterval(t1)
-                            }
+            contentType: false,
+            processData: false,
+            success: function (result) {
+                if (result['status'] == "ok") {
+                    data = result['data'];
+                    if (data.length == 0) {
+                        alert('当前时间段没有行驶记录');
+                        return
+                    }
+                    var t1 = setInterval(function () {
+                        map.clearOverlays();
 
-                        }, 200);
+                        var d = data.shift();
+                        if (d) {
+                            var lng = d['lng'];
+                            var lat = d['lat'];
+                            var point = new BMap.Point(lng, lat);
+                            addMarker(point, 1, d);
+                            map.centerAndZoom(point, 15);
+                            $("#recTime").text(timestampToTime(d['gps_time']));
+                            lastPoint = point;
+                            lastCourse = {'course': d["course"]}
+                        }
+                        else {
+                            console.log(lastPoint);
+                            addMarker(lastPoint, 1, d);
+                            map.centerAndZoom(lastPoint, 15);
+                            clearInterval(t1);
+
+                        }
+
+                    }, 200);
 //                    for (var i = 0; i < data.length; i++) {
 ////                        map.clearOverlays();
 //
 //                    }
-                    }
-                    else {
-                        alert('服务器出错，请稍后')
-                    }
                 }
+                else {
+                    alert('服务器出错，请稍后')
+                }
+            }
 
-            })
+        })
 
 
-        });
-    </script>
+    });
+</script>
 {% endblock %}
