--- a/templates/car/mendHistoryList.html
+++ b/templates/car/mendHistoryList.html
@@ -6,28 +6,33 @@
 </style>
 {% endblock %}
 {% block content %}
+    <h4>维护列表</h4>
+<ul  class="collection">
 
 
-<table class="striped centered">
-    <h4>{{data.Car.name}}保养详情</h4>
-
-    <tbody>
-
-    <tr>
-        <td>维护人</td>
-        <td>{{data.User.name}}</td>
-    </tr>
-    <tr>
-        <td>维护时间</td>
-        <td>{{data.created_at}}</td>
-    </tr>
-    <tr>
-        <td>维护类型</td>
-        <td>{{data.type}}</td>
-    </tr>
-    </tbody>
-</table>
-
+    {% for d in data %}
+    <li  class="collection-item">
+        <div class=" row">
+            <div class="col s12"><span class="title">车牌号：<a href="/car/{{d.Car.id}}">{{d.Car.name}}</a></span>
+                <p>维护人：{{d.User.name}}<br>
+                    维护时间：{{d.created_at}}<br>
+                    维护类型：{{d.type}}<br>
+                </p>
+            </div>
+        </div>
+        <!--<td>-->
+        <!--{% for h in d.histories %}-->
+        <!--<a href="/historyDetail/{{h.id }}">{{h.created_at}}：{{h.Customer.name}}, {{h.type}} </a><br>-->
+        <!--{% endfor %}-->
+        <!--</td>-->
+        <!--<td>-->
+        <!--{% for m in d.mendhistories %}-->
+        <!--<a href="/mendHistoryDetail/{{m.id }}">{{m.created_at}}：{{m.User.name}}, {{m.type}} </a><br>-->
+        <!--{% endfor %}-->
+        <!--</td>-->
+    </li>
+    {% endfor %}
+</ul>
 
 {% endblock %}
 {% block script %}
