--- a/static/css/main.css
+++ b/static/css/main.css
@@ -11,3 +11,9 @@ nav .brand-logo {
     font-size: 1.1rem!important;
 
 }
+    #modal-carImg {
+        max-width: 150px;
+    }
+    #login{
+
+    }
