--- a/templates/car/customerDetail.html
+++ b/templates/car/customerDetail.html
@@ -14,7 +14,7 @@
     <tbody>
     <tr>
         <td>头像</td>
-        <td><img src="{{data.img}}" class="responsive-img"></td>
+        <td><img src="{{imgDomain}}{{data.img}}" class="responsive-img"></td>
 
     </tr>
     <tr>
