--- a/templates/car/index.html
+++ b/templates/car/index.html
@@ -20,13 +20,10 @@
         height: 90%
     }
 
-    #modal-carImg {
 
-    }
 </style>
 {% endblock %}
 {% block content %}
-
 
 
 <div id="map-container">
@@ -34,6 +31,26 @@
 </div>
 
 
+<!-- Modal Structure -->
+<div id="modal2" class="modal bottom-sheet">
+    <div class="modal-content">
+        <div class="row">
+            <div class="col s8">
+                <h4 id="modal-failed-title">
+
+                </h4>
+            </div>
+        </div>
+
+
+        <p id="modal-failed-refreshTime">更新时间：</p>
+        <p id="modal-failed-currentLoc">当前位置：</p>
+
+    </div>
+    <div class="modal-footer">
+        <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">关闭</a>
+    </div>
+</div>
 <!-- Modal Structure -->
 <div id="modal1" class="modal bottom-sheet">
     <div class="modal-content">
@@ -72,6 +89,7 @@
         <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">关闭</a>
     </div>
 </div>
+
 {% endblock %}
 {% block script %}
 <script type="text/javascript" src="http://api.map.baidu.com/api?v=3.0&ak=67CKhYZ0N7g1M0BLOHnOqsu6idBxN2vT"></script>
@@ -93,7 +111,7 @@
         }
 
         function addMarker(point, index, data) {  // 创建图标对象
-            var myIcon = new BMap.Icon("http://oc1is8h9w.bkt.clouddn.com/carmarker1.png", new BMap.Size(300, 225), {
+            var myIconColor = new BMap.Icon("http://oc1is8h9w.bkt.clouddn.com/carmarker2.png", new BMap.Size(60, 60), {
                 // 指定定位位置。
                 // 当标注显示在地图上时，其所指向的地理位置距离图标左上
                 // 角各偏移10像素和25像素。您可以看到在本例中该位置即是
@@ -101,19 +119,44 @@
                 // 设置图片偏移。
                 // 当您需要从一幅较大的图片中截取某部分作为标注图标时，您
                 // 需要指定大图的偏移位置，此做法与css sprites技术类似。
-                imageOffset: new BMap.Size(0, 0 - index * 25)   // 设置图片偏移
+                imageOffset: new BMap.Size(0, 0 - index * 0.2)   // 设置图片偏移
+            });
+            var myIconGrey = new BMap.Icon("http://oc1is8h9w.bkt.clouddn.com/carmarker3.png", new BMap.Size(50, 50), {
+                // 指定定位位置。
+                // 当标注显示在地图上时，其所指向的地理位置距离图标左上
+                // 角各偏移10像素和25像素。您可以看到在本例中该位置即是
+                // 图标中央下端的尖角位置。
+                // 设置图片偏移。
+                // 当您需要从一幅较大的图片中截取某部分作为标注图标时，您
+                // 需要指定大图的偏移位置，此做法与css sprites技术类似。
+                imageOffset: new BMap.Size(0, 0)   // 设置图片偏移
             });
             // 创建标注对象并添加到地图
-            var marker = new BMap.Marker(point, {icon: myIcon});
-{#            var marker = new BMap.Marker(point);#}
+            if (data["car"]["id"] !== "") {
+                var marker = new BMap.Marker(point, {icon: myIconColor, rotation: data['course']});
+
+            }
+            else {
+                var marker = new BMap.Marker(point, {icon: myIconGrey, rotation: data['course']});
+            }
+//{#            var marker = new BMap.Marker(point);#}
             marker.addEventListener("click", function () {
-                $('#modal-title').text(data['car']['name']);
-                $('#modal-carImg').attr('src', data['car']['img']);
-                $('#modal-refreshTime').text('更新时间：' + timestampToTime(data['gps_time']));
-                $('#modal-currentLoc').text('当前位置：' + data['address']);
-                $('#modal-carDetail').attr('href', 'car' + '/' + data['car']['id']);
-                $('#modal-carRec').attr('href', 'carRec' + '/' + data['car']['id']);
-                $('#modal1').modal('open');
+                if (data['car']["id"] !== "") {
+                    $('#modal-title').text(data['car']['name']);
+                    $('#modal-carImg').attr('src', "{{imgDomain}}" + data['car']['img']);
+                    $('#modal-refreshTime').text('更新时间：' + timestampToTime(data['gps_time']));
+                    $('#modal-currentLoc').text('当前位置：' + data['address']);
+                    $('#modal-carDetail').attr('href', 'car' + '/' + data['car']['id']);
+                    $('#modal-carRec').attr('href', 'carRec' + '/' + data['car']['id']);
+                    $('#modal1').modal('open');
+                }
+                else {
+                    $('#modal-failed-title').text('此设备暂未绑定车辆,请联系管理员或登陆后台修改');
+                    $('#modal-failed-refreshTime').text('更新时间：' + timestampToTime(data['gps_time']));
+                    $('#modal-failed-currentLoc').text('当前位置：' + data['address']);
+                    $('#modal2').modal('open');
+                }
+
 
             });
             map.addOverlay(marker);
@@ -137,10 +180,12 @@
                     if (result['status'] == "ok") {
                         data = result['data'];
                         for (var i = 0; i < data.length; i++) {
-                            var lng = data[i]['lng'];
-                            var lat = data[i]['lat'];
-                            var point = new BMap.Point(lng, lat);
-                            addMarker(point, i, data[i]);
+                            if (data[i]['device_info'] === 0) {
+                                var lng = data[i]['lng'];
+                                var lat = data[i]['lat'];
+                                var point = new BMap.Point(lng, lat);
+                                addMarker(point, i, data[i]);
+                            }
                         }
                         map.centerAndZoom(point, 15);
 
