--- a/templates/login.html
+++ b/templates/login.html
@@ -5,17 +5,17 @@
         <div class="row">
             <div class="input-field col s12">
                 <input name="username" id="username" type="text" class="validate">
-                <label for="username">Username</label>
+                <label for="username">用户名</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s12">
                 <input name="password" id="password" type="password" class="validate">
-                <label for="password">Password</label>
+                <label for="password">密码</label>
             </div>
         </div>
     <div class="row">
-        <button class="btn waves-effect waves-light" type="submit" id="login">login
+        <button class="btn waves-effect waves-light blue lighten-2" type="submit" id="login">登陆
             <i class="material-icons right">send</i>
         </button>
 
