--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
         <li><a href="{{url_for('mendHistoryList')}}">维护信息</a></li>
         <li><a href="{{url_for('historyList')}}">租赁历史</a></li>
           <li><a href="admin">后台管理</a></li>
-          <li><a href="logout">退出登录</a></li>
+          <li><a href="{{url_for('logout')}}">退出登录</a></li>
       </ul>
       <ul class="side-nav" id="mobile-demo">
         <li><a href="{{url_for('customerList')}}">客户信息</a></li>
@@ -30,7 +30,7 @@
         <li><a href="{{url_for('mendHistoryList')}}">维护信息</a></li>
         <li><a href="{{url_for('historyList')}}">租赁历史</a></li>
           <li><a href="admin">后台管理</a></li>
-          <li><a href="logout">退出登录</a></li>
+          <li><a href="{{url_for('logout')}}">退出登录</a></li>
       </ul>
     </div>
 
