--- a/templates/car/index.html
+++ b/templates/car/index.html
@@ -111,7 +111,7 @@
         }
 
         function addMarker(point, index, data) {  // 创建图标对象
-            var myIconColor = new BMap.Icon("http://oc1is8h9w.bkt.clouddn.com/carmarker2.png", new BMap.Size(60, 60), {
+            var myIconColor = new BMap.Icon("http://p5w48dhwa.bkt.clouddn.com/carRed.png", new BMap.Size(60, 60), {
                 // 指定定位位置。
                 // 当标注显示在地图上时，其所指向的地理位置距离图标左上
                 // 角各偏移10像素和25像素。您可以看到在本例中该位置即是
@@ -121,7 +121,7 @@
                 // 需要指定大图的偏移位置，此做法与css sprites技术类似。
                 imageOffset: new BMap.Size(0, 0 - index * 0.2)   // 设置图片偏移
             });
-            var myIconGrey = new BMap.Icon("http://oc1is8h9w.bkt.clouddn.com/carmarker3.png", new BMap.Size(50, 50), {
+            var myIconGrey = new BMap.Icon("http://p5w48dhwa.bkt.clouddn.com/carGrey.png", new BMap.Size(60, 60), {
                 // 指定定位位置。
                 // 当标注显示在地图上时，其所指向的地理位置距离图标左上
                 // 角各偏移10像素和25像素。您可以看到在本例中该位置即是
