--- a/CarWechat/templates/base.html
+++ b/CarWechat/templates/base.html
@@ -3,7 +3,8 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <!--Import Google Icon Font-->
-<link href="https://cdn.bootcss.com/material-design-icons/3.0.1/iconfont/material-icons.min.css" rel="stylesheet">    <!--Import materialize.css-->
+    <link href="https://cdn.bootcss.com/material-design-icons/3.0.1/iconfont/material-icons.min.css" rel="stylesheet">
+    <!--Import materialize.css-->
     <link href="https://cdn.bootcss.com/materialize/0.100.2/css/materialize.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static',filename='css/main.css') }}">
     {% block css %}{% endblock %}
@@ -14,7 +15,35 @@
 <body>
 <nav>
     <div class="nav-wrapper blue lighten-2">
-        <a href="#" class="brand-logo"><i class="material-icons">home</i>通力汽车</a>
+
+        <a href="#" class="brand-logo"><i class="material-icons">home</i>通力汽车{{current}}</a>
+        {% if current_user.is_authenticated %}
+
+        <img src="{{imgDomain}}{{ current_user.img }}" alt="Contact Person" class="circle head"
+             data-activates="slide-out" id="headimg">
+        <!--<a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>-->
+        {% else %}
+        <p>未登录</p>
+        {% endif %}
+        <ul id="slide-out" class="side-nav">
+            <li>
+                <div class="userView">
+                    <div class="background">
+                        <img src="{{ url_for('static',filename='img/background.png') }}">
+                    </div>
+                    <a href="#!user"><img class="circle" src="{{imgDomain}}{{ current_user.img }}"></a>
+                    <a href="#!name"><span class="white-text name">{{current_user.name}}</span></a>
+                </div>
+            </li>
+            <li><a href="{{ url_for('web.selectCar') }}"><i class="material-icons">shopping_cart</i>去租车</a> </li>
+            <li><a href="{{ url_for('web.order') }}"><i class="material-icons">view_list</i>看订单</a> </li>
+            <!--<li>-->
+                <!--<div class="divider"></div>-->
+            <!--</li>-->
+            <!--<li><a class="subheader">子标题</a></li>-->
+            <!--<li><a class="waves-effect" href="#!">带波纹效果的第三链接</a></li>-->
+        </ul>
+
     </div>
 
 </nav>
