--- a/CarWechat/templates/car/login.html
+++ b/CarWechat/templates/car/login.html
@@ -1,4 +1,4 @@
-{% extends "wechat/base.html" %}
+{% extends "base.html" %}
 {% block content %}
 <div class="container col s12">
     <form class="col s12" action="login" method="post">
