--- a/CarWechat/templates/car/error.html
+++ b/CarWechat/templates/car/error.html
@@ -1,13 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<h1>
- error!!!!!!!!
-</h1>
+{% extends "base.html" %}
+{% block css %}
+<style type="text/css">
+    .container {
+        padding: 20px;
+    }
+</style>
+{% endblock %}
+{% block content %}
+<div class="container">
+    <div>
+        <h6 class="greyWords">{{ data.msg }}</h6>
+    </div>
+</div>
+{% endblock %}
+{% block script %}
+<script>
 
-</body>
-</html>
+</script>
+{% endblock %}
