--- a/CarWechat/templates/car/selectCar.html
+++ b/CarWechat/templates/car/selectCar.html
@@ -1,81 +1,67 @@
 {% extends "base.html" %}
 {% block css %}
-<style>
+
+    <style>
 
 
-    .carTypePrice {
-        color: red;
-    }
-</style>
+        .carTypePrice {
+            color: red;
+        }
+    </style>
 {% endblock %}
 {% block content %}
-<div class="row">
-    {% for d in data %}
+    <div class="row">
+        {% for d in data %}
 
-    <div class="col s12 m6 l4">
-        <div class="col s12 m6">
-            <div class="card">
-                <div class="card-image">
-                    <img src="{{imgDomain}}{{ d.img }}!fang">
+            <div class="col s12 m6 l4">
+                <div class="col s12 m6">
+                    <div class="card">
+                        <div class="card-image">
+                            <img src="{{ imgDomain }}{{ d.img }}!fang">
 
-                    <a class="btn-floating halfway-fab waves-effect waves-light blue lighten-1 addtocart"><i
-                            class="material-icons">shopping_cart</i></a>
+                            <a href="{{ url_for('web.cart',id=d.id) }}" class="btn-floating halfway-fab waves-effect waves-light blue lighten-1 addtocart"><i
+                                    class="material-icons"
+                                    >shopping_cart</i></a>
+                        </div>
+                        <div class="card-content">
+                            <span class="card-title">{{ d.name }}</span>
+                            <p>价格：{{ d.price }}/天</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="card-content">
-                    <span class="card-title">{{ d.name }}</span>
-                    <p>价格：{{d.price}}/天</p>
-                </div>
-            </div>
-        </div>
 
-        <!--<div class="card horizontal">-->
-            <!--<div class="card-image">-->
+                <!--<div class="card horizontal">-->
+                <!--<div class="card-image">-->
                 <!--<img src="{{imgDomain}}{{ d.img }}!fang">-->
-            <!--</div>-->
-            <!--<div class="card-stacked">-->
+                <!--</div>-->
+                <!--<div class="card-stacked">-->
                 <!--<div class="card-content">-->
-                    <!--<p class="carTypeName">{{ d.name }}</p>-->
+                <!--<p class="carTypeName">{{ d.name }}</p>-->
                 <!--</div>-->
                 <!--<div class="card-action row">-->
-                    <!--<div class=" carTypePrice col s8 ">价格：{{d.price}}/天</div>-->
-                    <!--<div class="col s4">-->
-                        <!--<a href="#" class="addtocart btn-floating  waves-effect waves-light blue lighten-2 "><i-->
-                                <!--class="material-icons">shopping_cart</i></a>-->
-                    <!--</div>-->
+                <!--<div class=" carTypePrice col s8 ">价格：{{d.price}}/天</div>-->
+                <!--<div class="col s4">-->
+                <!--<a href="#" class="addtocart btn-floating  waves-effect waves-light blue lighten-2 "><i-->
+                <!--class="material-icons">shopping_cart</i></a>-->
+                <!--</div>-->
 
                 <!--</div>-->
-            <!--</div>-->
-        <!--</div>-->
+                <!--</div>-->
+                <!--</div>-->
+            </div>
+
+
+        {% endfor %}
     </div>
-
-
-    {% endfor %}
-</div>
 {% endblock %}
 {% block script %}
-    <script src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
-<script>
-
-wx.config({
-    debug: true, // 开启调试模式,调用的所有api的返回值会在客户端alert出来，若要查看传入的参数，可以在pc端打开，参数信息会通过log打出，仅在pc端时才会打印。
-    appId: '{{ wxJSSDKConfig['appId'] }}', // 必填，公众号的唯一标识
-    timestamp: '{{ wxJSSDKConfig['timestamp'] }}', // 必填，生成签名的时间戳
-    nonceStr: '{{ wxJSSDKConfig['nonceStr'] }}', // 必填，生成签名的随机串
-    signature: '{{ wxJSSDKConfig['signature'] }}',// 必填，签名
-    jsApiList: ["getLocation","chooseWXPay"] // 必填，需要使用的JS接口列表
-});
-wx.ready(function(){
-    // config信息验证后会执行ready方法，所有接口调用都必须在config接口获得结果之后，config是一个客户端的异步操作，所以如果需要在页面加载时就调用相关接口，则须把相关接口放在ready函数中调用来确保正确执行。对于用户触发时才调用的接口，则可以直接调用，不需要放在ready函数中。
-    alert("ok!")
-});
-wx.error(function(res){
-    // config信息验证失败会执行error函数，如签名过期导致验证失败，具体错误信息可以打开config的debug模式查看，也可以在返回的res参数中查看，对于SPA可以在这里更新签名。
-});
-
-    $(".addtocart").click(function () {
-        alert("即将开启，请持续关注，敬请期待！!")
-    })
+    <script>
 
 
-</script>
+{#        $(".addtocart").click(function () {#}
+{#            alert("即将开启，请持续关注，敬请期待！!")#}
+{#        })#}
+
+
+    </script>
 {% endblock %}
