--- a/CarWechat/templates/car/repay.html
+++ b/CarWechat/templates/car/repay.html
@@ -34,33 +34,34 @@
                     <table class="striped centered">
 
                         <tbody>
-{#                        <tr>#}
-{#                            <td>订单编号</td>#}
-{#                            <td></td>#}
-{#                        </tr>#}
+                 <tr>
+                            <td>订单编号</td>
+                            <td>{{ data.tradeno }}</td>
+                        </tr>
                         <tr>
                             <td>车型</td>
-                            <td>{{ carData.name }}</td>
+                            <td>{{ data.Cartype.name }}</td>
                         </tr>
                         <tr>
                             <td>每日租金</td>
-                            <td id="price">{{ carData.price }}</td>
+                            <td id="price">{{ data.Cartype.price }}</td>
                         </tr>
                         <tr>
                             <td>天数</td>
-                            <td><input id="count" class="z-depth-3" name="value" min="1" max="15"></td>
+                            <td>{{ data.count }}</td>
                         </tr>
                         <tr>
                             <td>总价</td>
-                            <td id="sum">0</td>
+                            <td id="sum">{{ data.totalfee }}</td>
                         </tr>
                         </tbody>
                     </table>
                     <div class="row">
-                        <div class="col s6 offset-s3"><a class="blue lighten-1 waves-effect waves-light btn col s8 offset-s2"
-                                               id="pay">支付</a></div>
-{#                        <div class="col s6"><a class="red lighten-1 waves-effect waves-light btn col s8 offset-s2"#}
-{#                                               id="cancel">取消订单</a></div>#}
+                        <div class="col s6 offset-s3"><a
+                                class="blue lighten-1 waves-effect waves-light btn col s8 offset-s2"
+                                id="pay">支付</a></div>
+                        {#                        <div class="col s6"><a class="red lighten-1 waves-effect waves-light btn col s8 offset-s2"#}
+                        {#                                               id="cancel">取消订单</a></div>#}
                     </div>
                 </div>
             </div>
@@ -71,54 +72,9 @@
     <script src="https://cdn.bootcss.com/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
     <script>
-        function getOrder() {
-            var formData = new FormData();
-            formData.append('id', {{ carData.id }});
-            formData.append('count', $("#count").val());
-            $.ajax({
-                url: window.location.protocol + "//" + window.location.host + '/wx/api/makeorder',
-                type: 'POST',
-                data: formData,
-                contentType: false,
-                processData: false,
-                success: function (data) {
-                    if (data['status'] === 'ok') {
-                        result = data['result']
-                        wx.chooseWXPay({
-                            timestamp: result['timeStamp'], // 支付签名时间戳，注意微信jssdk中的所有使用timestamp字段均为小写。但最新版的支付后台生成签名使用的timeStamp字段名需大写其中的S字符
-                            nonceStr: result['nonceStr'], // 支付签名随机串，不长于 32 位
-                            package: result['package'], // 统一支付接口返回的prepay_id参数值，提交格式如：prepay_id=\*\*\*）
-                            signType: result['signType'], // 签名方式，默认为'SHA1'，使用新版支付需传入'MD5'
-                            paySign: result['paySign'], // 支付签名
-                            success: function (res) {
-                                alert('支付成功！')// 支付成功后的回调函数
-                            }
-                        });
-                    }
-                    else {
-                        alert(data['result'])
-                    }
-                }
 
-            })
-        }
         $(document).ready(function () {
-            function setSum() {
-                $("#sum").html($("#count").val() * $("#price").text()).css("color", 'red');
-            }
 
-            var count = $("#count").spinner(
-                {
-                    change: function (event, ui) {
-                        setSum();
-                    }
-                }
-            );
-            $("#count").val(1);
-            $("#sum").html($("#count").val() * $("#price").text());
-            $("#pay").click(function () {
-                getOrder();
-            })
         });
 
 
@@ -132,7 +88,18 @@
         });
         wx.ready(function () {
             // config信息验证后会执行ready方法，所有接口调用都必须在config接口获得结果之后，config是一个客户端的异步操作，所以如果需要在页面加载时就调用相关接口，则须把相关接口放在ready函数中调用来确保正确执行。对于用户触发时才调用的接口，则可以直接调用，不需要放在ready函数中。
-            //alert("ok!")
+            $("#pay").click(function () {
+                wx.chooseWXPay({
+                    timestamp: '{{ wxJSSDKPayConfig['timeStamp'] }}', // 支付签名时间戳，注意微信jssdk中的所有使用timestamp字段均为小写。但最新版的支付后台生成签名使用的timeStamp字段名需大写其中的S字符
+                    nonceStr: '{{ wxJSSDKPayConfig['nonceStr'] }}', // 支付签名随机串，不长于 32 位
+                    package: '{{  wxJSSDKPayConfig['package']}}', // 统一支付接口返回的prepay_id参数值，提交格式如：prepay_id=\*\*\*）
+                    signType: '{{ wxJSSDKPayConfig['signType'] }}', // 签名方式，默认为'SHA1'，使用新版支付需传入'MD5'
+                    paySign: '{{ wxJSSDKPayConfig['paySign'] }}', // 支付签名
+                    success: function (res) {
+                        alert('支付成功！')// 支付成功后的回调函数
+                    }
+                });
+            })
         });
         wx.error(function (res) {
             // config信息验证失败会执行error函数，如签名过期导致验证失败，具体错误信息可以打开config的debug模式查看，也可以在返回的res参数中查看，对于SPA可以在这里更新签名。
